\name{NEWS}
\title{NEWS file for the gCMAP}

\section{Changes in version 1.2.0}{
  \itemize{
    \item{NEW}{ New splitPerturbations function to split ExpressionSet (e.g. downloaded from ArrayExpress) by annotations provided in the phenoData slot.}
    \item{NEW}{ New eset_instances function to generate lists eSets from larger datasets by specifying an instance.matrix. }
    \item{NEW}{ New setSizes methods for CMAPCollections returns a data.frame with the number of members for each gene set stored in the Collection. }
    \item{NEW}{ fisher_score method now reports z-scores in the effect column instead of log-odds-ratio. The latter are returned in the new, separate LOR column. }
    \item{NEW}{ featureScores method now return list of matched identfiers when dispatched on two CMAPCollection. }
    \item{NEW}{ Added 'density.only', 'level.only' and 'strip.only' parameters to the CMAPResults plot method to selectively return only one plot component.}
    \item{IMPROVED}{ Reduced memory footprint of gsealm_jg_score and induceCMAPCollection methods.}
    \item{CHANGED}{ By default, 'removeShift' option for gsealm_jg_score and gsealm_score methods is now set to FALSE.}
    \item{BUGFIX}{ Corrected sign of effect size for fisher_score for perfect overlap between set and query.}
    \item{IMPROVED}{ Improved plot method for CMAPResults objects, lattice package is no longer required.}
  }
}	

\section{Changes in version 1.1.4}{
  \itemize{
    \item{BUGFIX}{ The gealm_score method is not defined for queries with missing values and will now return the corresponding error message.}
    \itme{BUGFIX}{ GeneSetCollections containing only one set are processed correctly by gsealm_score.}
  }
}	

\section{Changes in version 1.1.3}{
  \itemize{
    \item{BUGFIX}{ Corrected sign of effect size for fisher_score for perfect overlap between set and query.}
  }
}	

\section{Changes in version 1.1.2}{
  \itemize{