@@ -3,6 +3,7 @@
 
 \section{Changes in version 1.2.0}{
   \itemize{
+    \item{BUGFIX}{ Fixed missing gene names in featureScores method with CMAPCollections queries containing single-gene sets.}
     \item{NEW}{ New splitPerturbations function to split ExpressionSet (e.g. downloaded from ArrayExpress) by annotations provided in the phenoData slot.}
     \item{NEW}{ New eset_instances function to generate lists eSets from larger datasets by specifying an instance.matrix. }
     \item{NEW}{ New setSizes methods for CMAPCollections returns a data.frame with the number of members for each gene set stored in the Collection. }
